[workspace]
resolver = "2"

[package]
authors = ["swrge"]
categories = ["caching"]
description = "In-process-memory based cache for the Twilight ecosystem."
edition = "2021"
homepage = "https://twilight.rs/chapter_1_crates/section_4_cache_inmemory.html"
include = ["/src"]
keywords = ["discord", "discord-api", "twilight"]
license = "MIT"
name = "randy-storage"
repository = "https://github.com/swrge/randy-storage"
rust-version = "1.84.0"
version = "0.1.0"

[dependencies]
bitflags = { default-features = false, version = "2" }
dashmap = { default-features = false, version = ">= 5.3, < 7" }
serde = { default-features = false, features = ["derive"], version = "1" }
twilight-model = { default-features = false, git = "https://github.com/swrge/randy-model", version = "0.1.0", package = "randy-model" }

# Optional dependencies.
twilight-util = { default-features = false, features = ["permission-calculator"], optional = true, git = "https://github.com/swrge/randy-tools", package = "randy-tools", version = "0.1.0" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
tracing = "0.1"
tracing-subscriber = { default-features = false, features = ["fmt", "tracing-log"], version = "0.3" }
twilight-gateway = { default-features = false, features = ["rustls-native-roots"], git = "https://github.com/swrge/randy-gateway", version = "0.1.0", package = "randy-gateway" }

[features]
permission-calculator = ["dep:twilight-util"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
