#[workspace]
#resolver = "2"

[package]
name = "randy-storage"
description = "Optimized storage and cache for randy."
repository = "https://github.com/swrge/randy-storage"
version = "0.1.0"
include = ["/src"]
authors = ["swrge", "Twilight Contributors"]
edition = "2021"
rust-version = "1.84.0"
license = "ISC"


[dependencies]
bitflags = { default-features = false, version = "2" }
dashmap = { default-features = false, version = ">= 5.3, < 7" }
serde = { default-features = false, features = ["derive"], version = "1" }
randy-model = { default-features = false, git = "https://github.com/swrge/randy-model", version = "0.1.0", package = "randy-model" }

# Optional dependencies.
randy-tools = { default-features = false, features = ["permission-calculator"], optional = true, git = "https://github.com/swrge/randy-tools", package = "randy-tools", version = "0.1.0" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
tracing = "0.1"
tracing-subscriber = { default-features = false, features = ["fmt", "tracing-log"], version = "0.3" }
randy-gateway = { default-features = false, features = ["rustls-native-roots"], git = "https://github.com/swrge/randy-gateway", version = "0.1.0", package = "randy-gateway" }

[features]
permission-calculator = ["dep:randy-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
